Improve FileHeaderJavacPlugin, add a dedicated test.